Content images and site plan

--- a/site-plan.html
+++ b/site-plan.html
@@ -125,29 +125,85 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Bots Explained
+Bots are similar to regular Webex users. They can participate in 1-to-1 and group spaces and users can message them directly or add them to a group space. A special badge is added to a bot's avatar in the Webex clients so users know they're interacting with a bot instead of a human.
+A bot can only access messages sent to it directly. In group spaces, bots must be @mentioned to access the message. In 1-to-1 spaces, a bot has access to all messages from the user.
+Bots do not, however, perform actions within Webex on behalf of a Webex user. If you're creating an application that needs to participate in Webex and perform actions with a user's account, check out Integrations.
+
+Benefits of automation
+
+Cisco Webex
+
+Why automatization of tasks are useful?
+
+
+
+Why will people come to your site?
+Because they are interested in automating tasks in their companies using Webex bots
+
+What questions will your visitors expect your site to answer for them?
+How they can contact us?
+How they can learn what we do?
+How we develop a bot?
+What are the work uses?
+How much money they can save?
+Why automatization of tasks are useful?
+
+
+What types of activities will visitors want to complete on your site?
+Now how to contact us
+Learn about the product
+See examples of how they can use what we are offering
+
+
+What information is necessary to complete any actions your site offers?
+Reach us on WhatsApp
+
+Why will your visitors come to your site instead of another to get this information or complete the actions?
+Because I do not know of any other people offering this
+
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Webex-logo.png" alt="Webex logo">
+        <img src="images/code_image.jpeg" alt="code image">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Type of bots</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Types of Bots
+Bots come in all different shapes and sizes. Here are some ideas for a few different types of bots you can make:
+Notifiers
+Notifier bots typically respond to events in external services and post a summary in Webex. For example, a GitHub Bot may listen for commits on a particular repo and post the committer's name and comment into a Webex space set aside for this purpose. Or a Deal Bot that lives in an account-specific space and posts updates from a CRM along with relevant news about the company like a product launch or earnings report.
+Controllers
+Controller bots act as a text-based remote control for external services. For example, a Jira Bot may allow software engineers and product managers to control or query information from the popular bug tracking system Jira, all from the comfort of a Webex space.
+
+Controller bots are generally passive, waiting for someone in the room to issue a command. In group rooms, bots can only see messages in which they are mentioned (1:1 rooms bots can see all messages as they are automatically "mentioned"). Your users are required to mention the bot preceding the command like @jira find WEBSITE-22 where @jira is the bot's name.
+Currently, the Webex SDKs do not support extracting commands from messages. You'll need to parse it out after the mention. Future versions of the Webex SDKs will have built-in support for commands. Keep your eyes on the blog for updates.
+Assistants
+Virtual assistants are the holy grail of chatbots. At minimum, an assistant should understand natural language, allowing the user to ask it questions as they would to a human.
+Recent advancements in NLP (Natural Language Processing) have made understanding natural language requests not only possible, but quite accessible to the average developer. Most notably, Google launched Google Cloud Natural Language API in the summer of 2016, providing syntax parsing, sentiment analysis and deep noun classification.
+Responding to natural language is a good first step but a truly exceptional assistant bot will be conversational, using past interactions to contextualize the most recent query. This is a very complex problem domain; luckily there are companies like Dialogflow providing a conversational platform built specifically for bots.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/R2D2.jpeg" alt="R2D2 bot">
+        <img src="images/Walle.jpeg" alt="Walle">
+        <img src="images/robot_solo.jpeg" alt="Robot solo">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Benefits of automation</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The Benefits Of Automation In Today's Workforce forbes
+Robotics Can Increase Overall Productivity
+When robots and automation are implemented in a business effectively, they don't replace jobs. They augment them to drive greater productivity. In fact, some research has shown that robots are actually driving the creation of new job positions. The difference in these jobs has to do with skill set. And since they require higher skill levels, the jobs they're providing have the potential to produce higher wages. That said, this shift in the industry will create a barrier for some workers who do not have the required accreditations for these higher-skilled jobs, but several companies have taken measures to overcome this. Many are choosing to invest in their employees' education in order to broaden their skills, including Amazon, L'Oreal and Adobe.
+
+https://www.forbes.com/sites/forbestechcouncil/2020/05/01/the-benefits-of-automation-in-todays-workforce/?sh=392db7491cc8
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/computerinadesk.jpeg" alt="Computer desk">
+        <img src="images/time and money.png" alt="image for page3">
 
       </ul>
       <hr>
