--- a/site-plan.html
+++ b/site-plan.html
@@ -165,8 +165,8 @@ Because I do not know of any other people offering this
 
       </p>
       <p>Images for the Home page</p>
-        <img src="images/Webex-logo.png" alt="Webex logo">
-        <img src="images/code_image.jpeg" alt="code image">
+        <img class="image" src="images/Webex-logo.png" alt="Webex logo">
+        <img class="image" src="images/code_image.jpeg" alt="code image">
 
       </ul>
       <h3>Type of bots</h3>
@@ -187,9 +187,9 @@ Responding to natural language is a good first step but a truly exceptional assi
 
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/R2D2.jpeg" alt="R2D2 bot">
-        <img src="images/Walle.jpeg" alt="Walle">
-        <img src="images/robot_solo.jpeg" alt="Robot solo">
+        <img class="image" src="images/R2D2.jpeg" alt="R2D2 bot">
+        <img class="image" src="images/Walle.jpeg" alt="Walle">
+        <img class="image" src="images/robot_solo.jpeg" alt="Robot solo">
 
       </ul>
       <h3>Benefits of automation</h3>
@@ -202,8 +202,8 @@ https://www.forbes.com/sites/forbestechcouncil/2020/05/01/the-benefits-of-automa
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/computerinadesk.jpeg" alt="Computer desk">
-        <img src="images/time and money.png" alt="image for page3">
+        <img class="image" src="images/computerinadesk.jpeg" alt="Computer desk">
+        <img class="image" src="images/time and money.png" alt="image for page3">
 
       </ul>
       <hr>
