Webex image adjust

--- a/site-plan.html
+++ b/site-plan.html
@@ -165,7 +165,7 @@ Because I do not know of any other people offering this
 
       </p>
       <p>Images for the Home page</p>
-        <img class="image" src="images/Webex-logo.png" alt="Webex logo">
+        <img src="images/Webex-logo.png" alt="Webex logo">
         <img class="image" src="images/code_image.jpeg" alt="code image">
 
       </ul>
