--- a/site-plan.html
+++ b/site-plan.html
@@ -219,13 +219,13 @@ https://www.forbes.com/sites/forbestechcouncil/2020/05/01/the-benefits-of-automa
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Type of bots</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Benefits of automation</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
