--- a/site-plan.html
+++ b/site-plan.html
@@ -217,19 +217,19 @@ https://www.forbes.com/sites/forbestechcouncil/2020/05/01/the-benefits-of-automa
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home_wire.jpeg" alt="home page wireframe">
 
       <h3>Type of bots</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/type_of_bots_wire.jpeg" alt="Type of bots page 2 wireframe">
 
       <h3>Benefits of automation</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/benefits_wireframe.jpeg" alt="Benefits page 3 wireframe">
     </main>
   </body>
 
